doc: update demo with more examples

--- a/demo/frontend/html/compressed.html
+++ b/demo/frontend/html/compressed.html
@@ -1,9 +1,7 @@
-<h1>Welcome to image optimizer demo</h1>
-
 <nav>
     <a href="/original.html">original</a> |
     <a href="/compressed.html">compressed</a> |
     <a href="/reponsive.html">reponsive</a> |
 </nav>
 
-
+<img src="/very_big.jpg" alt="" width="100%">
